--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -1,4 +1,4 @@
-<div class="create">
+<div class="create overflow-hidden">
     <div class="form-signin h-100 row justify-content-center align-items-center pt-5">
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 mx-auto h-100 mt-5 py-5">
             <div class="logo-image d-flex align-items-center justify-content-center mb-5 mt-5">
