--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button class="btn btn-primary w-100 py-2" type="button">Войти</button>
+                    <button class="btn btn-primary w-100 py-2" type="button" id="process">Войти</button>
                 </div>
             </form>
             <div class="link text-center mb-5">
