auth and info utils added

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -46,7 +46,7 @@
                 </div>
             </form>
             <div class="link text-center mb-5">
-                <p class="mt-5 mb-3 text-body-secondary">Ещё нет аккаунта? <a href="/create" class="mx-sm-auto">Пройдите
+                <p class="mt-5 mb-3 text-body-secondary">Ещё нет аккаунта? <a href="/signup" class="mx-sm-auto">Пройдите
                     регистрацию</a></p>
             </div>
         </div>
