--- a/src/templates/edit/income.html
+++ b/src/templates/edit/income.html
@@ -44,16 +44,15 @@
                             </a>
                         </li>
                         <li class="nav-item category w-100 mt-1 disabled position-relative">
-                            <a href="#navmenu"
-                               class="nav-link btn btn-outline-primary active d-flex justify-content-center justify-content-lg-between align-items-center border-0 px-3"
-                               data-bs-toggle="collapse" aria-current="page">
+                            <button class="nav-link btn btn-outline-primary link-body-emphasis w-100 d-flex justify-content-center justify-content-lg-between align-items-center border-0 px-3"
+                                    type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" aria-expanded="false" aria-controls="navmenu">
                                 <span class="fs-6 d-none d-xl-block">Категории</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                                      class="bi bi-chevron-right ms-xl-2" viewBox="0 0 16 16">
                                     <path fill-rule=""
                                           d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                                 </svg>
-                            </a>
+                            </button>
                             <ul class="nav collapse border border-primary rounded-bottom flex-column align-items-start w-100 position-absolute bg-white z-3"
                                 id="navmenu"
                                 data-bs-parent="menu">
@@ -84,7 +83,7 @@
                     </ul>
                     <div class="balance text-primary-emphasis d-none d-md-block">
                         <p class="d-none d-xl-inline fs-6 mb-0 text-start">Баланс: </p>
-                        <span class="text-primary d-inline">500$</span>
+                        <span class="text-primary d-inline" id="balance">500$</span>
                     </div>
                     <hr class="w-100 d-none d-md-block">
                     <div class="dropdown">
@@ -98,7 +97,7 @@
                                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                                 </svg>
                             </div>
-                            <strong class="text-primary-emphasis d-none d-xl-block">User name</strong>
+                            <strong class="text-primary-emphasis d-none d-xl-block" id="user-name">User name</strong>
                         </a>
                         <ul class="dropdown-menu text-small shadow">
                             <li><a class="dropdown-item text-primary-emphasis" href="/logout">Выйти</a></li>
