added http utils

--- a/src/templates/income.html
+++ b/src/templates/income.html
@@ -104,7 +104,7 @@
 
         <div class="main-content col-sm p-3 p-md-5 min-vh-100">
             <h1 class="h2 mt-4 mb-5 text-body fw-bold text-center text-md-start">Доходы</h1>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mb-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mb-3" id="categories">
                 <div class="col mb-3">
                     <div class="card p-3">
                         <div class="card-title fs-4 mb-2 fw-bolder text-body">Депозиты</div>
