income category created

--- a/src/templates/create-group/income.html
+++ b/src/templates/create-group/income.html
@@ -108,11 +108,11 @@
                 <h1 class="h2 mt-4 mb-5 text-body fw-bold text-center text-md-start">Создание категории доходов</h1>
                 <div class="create d-flex flex-column col-auto col-lg-7 col-xl-5">
                     <div class="input-group w-100 mb-3">
-                        <input type="text" class="form-control" placeholder="Название...">
+                        <input type="text" class="form-control" placeholder="Название..." id="new-category-title">
                     </div>
                     <div class="action">
-                        <button class="btn btn-success" type="button">Создать</button>
-                        <button class="btn btn-danger" type="button">Отмена</button>
+                        <button class="btn btn-success" type="button" id="create-btn">Создать</button>
+                        <button class="btn btn-danger" type="button" id="back-btn">Отмена</button>
                     </div>
                 </div>
             </div>
