--- a/src/templates/income.html
+++ b/src/templates/income.html
@@ -105,43 +105,43 @@
         <div class="main-content col-sm p-3 p-md-5 min-vh-100">
             <h1 class="h2 mt-4 mb-5 text-body fw-bold text-center text-md-start">Доходы</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mb-3" id="categories">
-                <div class="col mb-3">
-                    <div class="card p-3">
-                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Депозиты</div>
-                        <div class="card-action">
-                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>
-                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card p-3">
-                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Зарплата</div>
-                        <div class="card-action">
-                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>
-                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card p-3">
-                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Сбережения</div>
-                        <div class="card-action">
-                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>
-                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card p-3">
-                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Инвестиции</div>
-                        <div class="card-action">
-                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>
-                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
+<!--                <div class="col mb-3">-->
+<!--                    <div class="card p-3">-->
+<!--                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Депозиты</div>-->
+<!--                        <div class="card-action">-->
+<!--                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>-->
+<!--                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col mb-3">-->
+<!--                    <div class="card p-3">-->
+<!--                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Зарплата</div>-->
+<!--                        <div class="card-action">-->
+<!--                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>-->
+<!--                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col mb-3">-->
+<!--                    <div class="card p-3">-->
+<!--                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Сбережения</div>-->
+<!--                        <div class="card-action">-->
+<!--                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>-->
+<!--                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col mb-3">-->
+<!--                    <div class="card p-3">-->
+<!--                        <div class="card-title fs-4 mb-2 fw-bolder text-body">Инвестиции</div>-->
+<!--                        <div class="card-action">-->
+<!--                            <a href="/edit-income" class="btn btn-primary me-2 mb-2" type="button">Редактировать</a>-->
+<!--                            <button class="btn btn-danger mb-2" type="button" data-bs-toggle="modal" data-bs-target="#modalSheet">Удалить</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <div class="col mb-3" id="add-button">
                         <a rel="stylesheet" href="/create-income" class="card p-3 add h-100 btn btn-outline-light my-auto mx-auto">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="my-auto mx-auto">
                             <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
@@ -159,7 +159,7 @@
                     <p class="text-center mb-0 fw-bolder">Вы действительно хотите удалить категорию? Связанные доходы будут удалены навсегда.</p>
                 </div>
                 <div class="modal-footer d-flex justify-content-center border-top-0">
-                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">Да, удалить</button>
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal" id="delete-btn">Да, удалить</button>
                     <button type="button" class="btn btn-danger">Не удалять</button>
                 </div>
             </div>
