expenses category created

--- a/src/templates/edit/income.html
+++ b/src/templates/edit/income.html
@@ -114,7 +114,7 @@
                     </div>
                     <div class="action">
                         <button class="btn btn-success" type="button" id="save-changes">Сохранить</button>
-                        <button class="btn btn-danger" type="button">Отмена</button>
+                        <button class="btn btn-danger" type="button" id="back-button">Отмена</button>
                     </div>
                 </div>
             </div>
