--- a/src/templates/edit/expenses.html
+++ b/src/templates/edit/expenses.html
@@ -109,11 +109,11 @@
                     расходов</h1>
                 <div class="create d-flex flex-column col-auto col-lg-7 col-xl-5">
                     <div class="input-group w-100 mb-3">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="chosen-category">
                     </div>
                     <div class="action">
-                        <button class="btn btn-success" type="button">Сохранить</button>
-                        <button class="btn btn-danger" type="button">Отмена</button>
+                        <button class="btn btn-success" type="button" id="save-changes">Сохранить</button>
+                        <button class="btn btn-danger" type="button" id="back-button">Отмена</button>
                     </div>
                 </div>
             </div>
